--- a/login.html
+++ b/login.html
@@ -19,20 +19,77 @@
       --accent2:#60a5fa;
       --danger:#fb7185;
       --ok:#34d399;
+      --shadow:0 16px 44px rgba(0,0,0,.35);
     }
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--txt)}
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background:radial-gradient(900px 520px at 20% 0%, rgba(94,234,212,.12), transparent 55%),
+                 radial-gradient(900px 520px at 80% 0%, rgba(96,165,250,.10), transparent 55%),
+                 var(--bg);
+      color:var(--txt);
+    }
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     :focus-visible{outline:3px solid rgba(96,165,250,.55);outline-offset:3px;border-radius:10px}
 
-    .wrap{max-width:560px;margin:34px auto;padding:0 14px}
+    /* ---------- ProfitPilot Nav ---------- */
+    .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:60}
+    .pp-nav{
+      display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;
+      background:rgba(255,255,255,.06);
+      border:1px solid rgba(255,255,255,.10);
+      border-radius:18px;
+      padding:12px;
+      backdrop-filter:blur(10px);
+      box-shadow:0 10px 30px rgba(0,0,0,.22);
+    }
+    .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .pp-btn{
+      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);
+      font-weight:900;text-decoration:none;color:rgba(255,255,255,.92);
+      display:inline-flex;gap:8px;align-items:center;white-space:nowrap;
+      transition:transform .08s ease, filter .08s ease;
+    }
+    .pp-btn:hover{transform:translateY(-1px);filter:brightness(1.05)}
+    .pp-btn:active{transform:translateY(0)}
+    .pp-primary{
+      border:none;color:#0b1220;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      box-shadow:0 14px 28px rgba(96,165,250,.18);
+    }
+    .pp-active{
+      border-color:rgba(94,234,212,.35);
+      background:rgba(94,234,212,.10);
+      color:#eaf0ff;
+    }
+    .pp-user{
+      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.80);
+      font-weight:900;
+      display:none;
+      max-width:320px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
+    }
+    .pp-crumbs{
+      margin-top:10px;
+      font-size:12.5px;
+      color:rgba(255,255,255,.72);
+      display:flex;gap:6px;flex-wrap:wrap;align-items:center;
+    }
+    .pp-crumbs a{color:rgba(94,234,212,.95);font-weight:900;text-decoration:none}
+    .pp-sep{opacity:.55}
+
+    /* ---------- Card ---------- */
+    .wrap{max-width:560px;margin:22px auto 44px;padding:0 14px}
     .card{
       background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
       border:1px solid var(--line);
       border-radius:18px;
       padding:20px;
-      box-shadow:0 16px 44px rgba(0,0,0,.35);
+      box-shadow:var(--shadow);
     }
     h1{margin:0 0 10px;font-size:22px;letter-spacing:-.02em}
     .subtitle{margin:0 0 14px;color:var(--muted);font-size:13px;line-height:1.6}
@@ -58,8 +115,9 @@
       border-radius:12px;
       padding:8px 10px;
       cursor:pointer;
-      font-weight:800;
+      font-weight:900;
       font-size:12px;
+      user-select:none;
     }
     .iconbtn:hover{filter:brightness(1.1)}
     .row{
@@ -76,10 +134,10 @@
       background:rgba(255,255,255,.05);
       color:var(--txt);
       cursor:pointer;
-      font-weight:900;
-      transition:transform .08s ease, filter .08s ease;
+      font-weight:1000;
+      transition:transform .08s ease, filter .08s ease, opacity .08s ease;
     }
-    .btn:hover{transform:translateY(-1px)}
+    .btn:hover{transform:translateY(-1px);filter:brightness(1.05)}
     .btn:active{transform:translateY(0)}
     .btn.primary{
       border:none;
@@ -87,7 +145,308 @@
       background:linear-gradient(135deg,var(--accent),var(--accent2));
       box-shadow:0 14px 28px rgba(96,165,250,.18);
     }
-    .btn:disabled{opacity:.55;cursor:not-allowed;transform:none}
+    .btn:disabled{opacity:.55;cursor:not-allowed;transform:none;filter:none}
 
     .note{font-size:12px;color:var(--muted);margin-top:12px;line-height:1.6}
-    .m
+    .msg{
+      margin-top:12px;
+      font-size:12.5px;
+      line-height:1.6;
+      color:var(--muted);
+      padding:10px 12px;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.03);
+    }
+    .msg.ok{border-color:rgba(52,211,153,.28);background:rgba(52,211,153,.08);color:rgba(234,240,255,.92)}
+    .msg.bad{border-color:rgba(251,113,133,.28);background:rgba(251,113,133,.08);color:rgba(234,240,255,.92)}
+
+    .tiny{font-size:12px;color:var(--muted)}
+    .divider{height:1px;background:rgba(255,255,255,.08);margin:14px 0}
+  </style>
+
+  <script type="application/ld+json" id="ppBreadcrumbJson"></script>
+</head>
+
+<body>
+
+  <!-- NAV -->
+  <div class="pp-navwrap" role="navigation" aria-label="Primary">
+    <div class="pp-nav">
+      <div class="pp-left">
+        <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
+        <a class="pp-btn" href="index.html" data-nav="home">Home</a>
+        <a class="pp-btn" href="pricing.html" data-nav="pricing">Pricing</a>
+        <a class="pp-btn" href="reviews.html" data-nav="reviews">Reviews</a>
+        <a class="pp-btn" href="help.html" data-nav="help">How to use</a>
+        <a class="pp-btn" href="privacy.html" data-nav="privacy">Privacy</a>
+        <a class="pp-btn" href="terms.html" data-nav="terms">Terms</a>
+        <a class="pp-btn" href="faq.html" data-nav="faq">FAQ</a>
+      </div>
+
+      <div class="pp-right">
+        <span class="pp-user" id="ppUserChip">—</span>
+
+        <!-- Signed OUT -->
+        <a class="pp-btn pp-active" id="ppLoginBtn" href="login.html">Log in</a>
+        <a class="pp-btn pp-primary" id="ppSignupBtn" href="signup.html">Sign up</a>
+
+        <!-- Signed IN -->
+        <a class="pp-btn pp-primary" id="ppOpenBtn" href="app.html" style="display:none">Open app</a>
+        <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
+      </div>
+    </div>
+
+    <div class="pp-crumbs" aria-label="Breadcrumb">
+      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <span class="pp-sep">›</span>
+      <a href="index.html">ProfitPilot</a>
+      <span class="pp-sep">›</span>
+      <span>Log in</span>
+    </div>
+  </div>
+
+  <!-- CONTENT -->
+  <div class="wrap">
+    <div class="card">
+      <h1>Log in</h1>
+      <p class="subtitle">
+        Access your account and PRO status. If you just verified your email, you’ll be redirected automatically.
+      </p>
+
+      <label for="email">Email</label>
+      <div class="field">
+        <input id="email" type="email" placeholder="you@example.com" autocomplete="email" inputmode="email"/>
+      </div>
+
+      <label for="password">Password</label>
+      <div class="field">
+        <input id="password" type="password" placeholder="••••••••" autocomplete="current-password"/>
+        <button class="iconbtn" id="togglePw" type="button" aria-label="Show password">Show</button>
+      </div>
+
+      <div class="row">
+        <a class="tiny" href="reset.html">Forgot password?</a>
+        <a class="tiny" href="verify.html">Need verification email?</a>
+      </div>
+
+      <button class="btn primary" id="loginBtn" type="button">Log in</button>
+      <button class="btn" id="goSignupBtn" type="button">Create account</button>
+
+      <div class="msg" id="msgBox">—</div>
+
+      <div class="divider"></div>
+
+      <div class="note">
+        Trouble logging in? Email <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a>
+      </div>
+    </div>
+  </div>
+
+<script type="module">
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+
+  // ✅ Supabase (public anon key is OK in frontend)
+  const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
+  const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
+  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
+
+  // Breadcrumb JSON-LD
+  const base = "https://profitpilot.ukwebtools.com/";
+  const bc = document.getElementById("ppBreadcrumbJson");
+  if (bc){
+    bc.textContent = JSON.stringify({
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+        {"@type":"ListItem","position":2,"name":"ProfitPilot","item": base + "index.html"},
+        {"@type":"ListItem","position":3,"name":"Log in","item": base + "login.html"}
+      ]
+    });
+  }
+
+  // Elements
+  const msgBox = document.getElementById("msgBox");
+  const emailEl = document.getElementById("email");
+  const pwEl = document.getElementById("password");
+  const loginBtn = document.getElementById("loginBtn");
+  const goSignupBtn = document.getElementById("goSignupBtn");
+  const togglePw = document.getElementById("togglePw");
+
+  // Nav auth elements
+  const userChip = document.getElementById("ppUserChip");
+  const loginNavBtn = document.getElementById("ppLoginBtn");
+  const signupNavBtn = document.getElementById("ppSignupBtn");
+  const openNavBtn = document.getElementById("ppOpenBtn");
+  const logoutNavBtn = document.getElementById("ppLogoutBtn");
+
+  function setMsg(text, type=""){
+    msgBox.textContent = text || "—";
+    msgBox.classList.remove("ok","bad");
+    if (type === "ok") msgBox.classList.add("ok");
+    if (type === "bad") msgBox.classList.add("bad");
+  }
+
+  function setLoading(on){
+    loginBtn.disabled = on;
+    goSignupBtn.disabled = on;
+    loginBtn.textContent = on ? "Logging in…" : "Log in";
+  }
+
+  function friendlyAuthError(message){
+    const m = String(message || "").toLowerCase();
+
+    if (m.includes("invalid login credentials")) return "Email or password is incorrect.";
+    if (m.includes("email not confirmed")) return "Please verify your email first. Check inbox/spam, then try again.";
+    if (m.includes("too many requests")) return "Too many attempts. Wait a bit and try again.";
+    if (m.includes("user not found")) return "No account found with that email.";
+    if (m.includes("invalid email")) return "That email address looks invalid.";
+    if (m.includes("network")) return "Network error. Check your connection and try again.";
+
+    return message || "Login failed. Please try again.";
+  }
+
+  // Show/hide password
+  togglePw.addEventListener("click", ()=>{
+    const isPw = pwEl.type === "password";
+    pwEl.type = isPw ? "text" : "password";
+    togglePw.textContent = isPw ? "Hide" : "Show";
+    togglePw.setAttribute("aria-label", isPw ? "Hide password" : "Show password");
+    pwEl.focus();
+  });
+
+  // Enter to submit
+  [emailEl, pwEl].forEach(el=>{
+    el.addEventListener("keydown", (e)=>{
+      if (e.key === "Enter") loginBtn.click();
+    });
+  });
+
+  goSignupBtn.addEventListener("click", ()=> location.href = "signup.html");
+
+  // --- Critical: handle email verification / magic-link redirects ---
+  async function handleAuthRedirect(){
+    // 1) PKCE: ?code=...
+    const url = new URL(location.href);
+    const code = url.searchParams.get("code");
+    if (code){
+      const { data, error } = await supabase.auth.exchangeCodeForSession(code);
+      url.searchParams.delete("code");
+      history.replaceState({}, document.title, url.toString());
+
+      if (error){
+        console.error("exchangeCodeForSession error:", error);
+        return { ok:false, reason: friendlyAuthError(error.message) };
+      }
+      if (data?.session) return { ok:true, reason:"Verified. Signing you in…" };
+    }
+
+    // 2) Implicit: #access_token=...&refresh_token=...
+    const hash = location.hash?.startsWith("#") ? location.hash.slice(1) : "";
+    const hp = new URLSearchParams(hash);
+
+    // Recovery link: send to update-password page
+    const type = hp.get("type");
+    if (type === "recovery"){
+      location.href = "update-password.html" + (location.hash || "");
+      return { ok:false, reason:"Redirecting to password update…" };
+    }
+
+    const errDesc = hp.get("error_description") || hp.get("error");
+    if (errDesc){
+      history.replaceState({}, document.title, location.pathname + location.search);
+      return { ok:false, reason: decodeURIComponent(errDesc) };
+    }
+
+    const access_token = hp.get("access_token");
+    const refresh_token = hp.get("refresh_token");
+
+    if (access_token && refresh_token){
+      const { data, error } = await supabase.auth.setSession({ access_token, refresh_token });
+      history.replaceState({}, document.title, location.pathname + location.search);
+
+      if (error){
+        console.error("setSession error:", error);
+        return { ok:false, reason: friendlyAuthError(error.message) };
+      }
+      if (data?.session) return { ok:true, reason:"Verified. Signing you in…" };
+    }
+
+    return { ok:false };
+  }
+
+  // Auth UI in nav
+  async function refreshAuthUI(){
+    const { data: { session } } = await supabase.auth.getSession();
+
+    if (session?.user?.email){
+      userChip.style.display = "inline-flex";
+      userChip.textContent = session.user.email;
+
+      loginNavBtn.style.display = "none";
+      signupNavBtn.style.display = "none";
+
+      openNavBtn.style.display = "inline-flex";
+      logoutNavBtn.style.display = "inline-flex";
+    } else {
+      userChip.style.display = "none";
+
+      loginNavBtn.style.display = "inline-flex";
+      signupNavBtn.style.display = "inline-flex";
+
+      openNavBtn.style.display = "none";
+      logoutNavBtn.style.display = "none";
+    }
+  }
+
+  logoutNavBtn.addEventListener("click", async (e)=>{
+    e.preventDefault();
+    await supabase.auth.signOut();
+    setMsg("Signed out.", "ok");
+    await refreshAuthUI();
+  });
+
+  // Run redirect handler FIRST
+  setMsg("—");
+  const redirectResult = await handleAuthRedirect();
+  if (redirectResult?.reason) setMsg(redirectResult.reason, redirectResult.ok ? "ok" : "");
+  if (redirectResult?.ok){
+    // give the browser a beat to store session, then go
+    location.href = "app.html";
+  }
+
+  // If already signed in, go to app
+  const { data: { session } } = await supabase.auth.getSession();
+  if (session?.user){
+    location.href = "app.html";
+  }
+
+  await refreshAuthUI();
+  supabase.auth.onAuthStateChange(()=>refreshAuthUI());
+
+  // Login action
+  loginBtn.addEventListener("click", async ()=>{
+    const email = emailEl.value.trim();
+    const password = pwEl.value;
+
+    if (!email){ setMsg("Please enter your email.", "bad"); emailEl.focus(); return; }
+    if (!password){ setMsg("Please enter your password.", "bad"); pwEl.focus(); return; }
+
+    setLoading(true);
+    setMsg("Logging in…");
+
+    const { error } = await supabase.auth.signInWithPassword({ email, password });
+
+    if (error){
+      setLoading(false);
+      setMsg(friendlyAuthError(error.message), "bad");
+      return;
+    }
+
+    setMsg("Success. Redirecting…", "ok");
+    location.href = "app.html";
+  });
+</script>
+</body>
+</html>
